--- a/web/index.html
+++ b/web/index.html
@@ -9,123 +9,102 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hipster Maze Visualizer</title>
+    <title>Portfolio Item - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="css/portfolio-item.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" media="screen" href="http://silviomoreto.github.io/bootstrap-select/stylesheets/bootstrap-select.css">
-
+    <!-- Custom CSS -->
+    <link href="css/maze.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
 
-      body {
-        background: #fff;
-        text-align: center;
-        color:#333;
-        font-weight: bold;
-      }
-
-      .miniature{
-        background: #fff;
-        height: 200px;
-      }
-
-
-    </style>
 </head>
 
-<body id="page-top" class="index">
+<body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <a class="navbar-brand page-scroll" href="#page-top"><img width="200px" src="img/header-logo.png" style="margin-right:20px;"/> Maze Visualizer</a>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand " href="#page-top"><img width="200px" src="header-logo.png" style="margin-right:20px;"/> Maze Visualizer</a>
+
             </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
+        <!-- /.container -->
     </nav>
 
+    <!-- Page Content -->
+    <div class="container">
 
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
-        <div class="container">
+        <!-- Related Projects Row -->
+        <div class="row" id="miniatures-section">
+
+        </div>
+        <!-- /.row -->
+
+        <!-- Portfolio Item Row -->
+        <div class="row">
+
+            <div class="col-md-8">
+                <div id="canvas"><img class="img-responsive" src="http://placehold.it/750x500&text=Select a maze" alt=""></div>
+            </div>
+
+            <div class="col-md-4">
+
+                <h3>Play!</h3>
+                    <h4> Select an algorithm</h4>
+
+                      <select id="algorithms" class="selectpicker"></select>
+
+                    <br/><br/>
+
+                      <button id="start-button" type="button" class="btn btn-primary"></i> Start</button>
+                      <button id="stop-button" type="button" class="btn btn-secondary"></i> Stop</button>
+                    <br/><br/>
+                    <p>This example is powered by <a href="#">D3.js</a> and websockets. View project on <a href="">Github</a></p>
+
+                </ul>
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h3 class="section-heading">Maze examples</h3>
-                    <h3 class="section-subheading text-muted">Select one of the following mazes</h3>
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Hipster 2014</p>
                 </div>
             </div>
-            <div id="portfolio-section" class="row">
-                <!-- Mazes will be placed here -->
-            </div>
-        </div>
-    </section>
+            <!-- /.row -->
+        </footer>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Hipster 2014</span>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="https://twitter.com/hipster4j"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="https://github.com/citiususc/hipster/"><i class="fa fa-github"></i></a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
-    </footer>
-
-    <!-- Portfolio Modals -->
-    <!-- Use the modals below to showcase details about your portfolio projects! -->
-
-    <!-- Portfolio Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <select id="algorithms" class="selectpicker">
-
-                            </select>
-                            <div id="canvas"></div>
-                            <br/>
-                            <button id="start-button" type="button" class="btn btn-primary"></i> Start</button>
-                            <button id="stop-button" type="button" class="btn btn-secondary" data-dismiss="modal"></i> Close</button>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
+    <!-- /.container -->
 
     <!-- jQuery Version 1.11.0 -->
     <script src="js/jquery-1.11.0.js"></script>
@@ -133,20 +112,14 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <script src="http://silviomoreto.github.io/bootstrap-select/javascripts/bootstrap-select.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <!--<script src="js/cbpAnimatedHeader.js"></script>-->
-
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/agency.js"></script>
     <!-- D3.js -->
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="js/app/d3.v3.min.js"></script>
     <!-- App code -->
-    <script src="visualizer.js"></script>
-
+    <script src="js/app/maze.js"></script>
+    <script src="js/app/mazeView.js"></script>
+    <script src="js/app/util.js"></script>
+    <script src="js/app/websocketMgr.js"></script>
+    <script src="js/app/app.js"></script>
 
 </body>
 
