--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
     <title>Portfolio Item - Start Bootstrap Template</title>
 
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="web/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/portfolio-item.css" rel="stylesheet">
+    <link href="web/css/portfolio-item.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/maze.css" rel="stylesheet">
+    <link href="web/css/maze.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -41,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand " href="#page-top"><img width="200px" src="header-logo.png" style="margin-right:20px;"/> Maze Visualizer</a>
+                <a class="navbar-brand " href="#page-top"><img width="200px" src="web/header-logo.png" style="margin-right:20px;"/> Maze Visualizer</a>
 
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -107,19 +109,19 @@
     <!-- /.container -->
 
     <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
+    <script src="web/js/jquery-1.11.0.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="web/js/bootstrap.min.js"></script>
     <script src="http://silviomoreto.github.io/bootstrap-select/javascripts/bootstrap-select.js"></script>
     <!-- D3.js -->
-    <script src="js/app/d3.v3.min.js"></script>
+    <script src="web/js/app/d3.v3.min.js"></script>
     <!-- App code -->
-    <script src="js/app/maze.js"></script>
-    <script src="js/app/mazeView.js"></script>
-    <script src="js/app/util.js"></script>
-    <script src="js/app/websocketMgr.js"></script>
-    <script src="js/app/app.js"></script>
+    <script src="web/js/app/maze.js"></script>
+    <script src="web/js/app/mazeView.js"></script>
+    <script src="web/js/app/util.js"></script>
+    <script src="web/js/app/websocketMgr.js"></script>
+    <script src="web/js/app/app.js"></script>
 
 </body>
 
